--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-theme: jekyll-theme-minimal  # replace with your desired theme
+theme: jekyll-theme-slate  # replace with your desired theme
 title: ""
